# echo_mod

./: CMakeLists.txt  cross-build.sh  expected_output.txt  readme.md
client/: CMakeLists.txt
client/src/: client.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
images/: echo_class.drawio  echo_dyn_class.drawio  echo_dyn_policy.drawio
plautuml_pics/: app_build_cmake.puml  app_structure.puml
resources/: CPing.cdl  Client.edl  IPing.idl  Server.edl
server/: CMakeLists.txt
server/src/: server.c
